--- a/data/project-e8477172-087a-4d72-a309-60871b372ddd-data.json
+++ b/data/project-e8477172-087a-4d72-a309-60871b372ddd-data.json
@@ -1533,12 +1533,12 @@
         {
           "id": "176551718970958mzhllxq",
           "module": "Admin - Manage Staff",
-          "status": "Not Executed",
+          "status": "Pass",
           "comments": "Auto-generated Type: Positive Flow",
           "testData": "",
           "createdAt": "2025-12-12T05:26:29.709Z",
           "testSteps": " Enter a unique 'Username' (e.g., 'Waiter1').  Enter 'First Name' (e.g., 'Dhruv').  Enter 'Last Name' (e.g., 'Rai').  Select a 'Role' (e.g., 'Waiter') from the dropdown.  Enter a valid 'Mobile Number' (e.g., '8200043708').  Enter a valid 'Email ID' (e.g., 'testmail@gmail.com').  Enter a 4-digit 'PIN' (e.g., '1122').  Click the 'Add' button.  ",
-          "updatedAt": "2025-12-12T05:26:29.709Z",
+          "updatedAt": "2025-12-13T04:46:59.192Z",
           "testCaseId": "TC_AI_AUTO_02",
           "actualResult": "admin successfully add a staff member role: Waiter. , email is optional os there are no validation for email",
           "testScenario": "Admin successfully registers new staff with all valid mandatory fields and no email.",
