--- a/package.json
+++ b/package.json
@@ -12,7 +12,11 @@
   "dependencies": {
     "@google/generative-ai": "^0.21.0",
     "@supabase/supabase-js": "^2.86.0",
+    "@types/cors": "^2.8.17",
+    "@types/express": "^4.17.21",
     "@types/socket.io": "^3.0.1",
+    "@types/uuid": "^9.0.7",
+    "copyfiles": "^2.4.1",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "exceljs": "^4.4.0",
@@ -22,14 +26,10 @@
     "playwright": "^1.57.0",
     "simple-git": "^3.30.0",
     "socket.io": "^4.8.1",
+    "typescript": "^5.3.3",
     "uuid": "^9.0.1"
   },
   "devDependencies": {
-    "@types/cors": "^2.8.17",
-    "@types/express": "^4.17.21",
-    "@types/uuid": "^9.0.7",
-    "copyfiles": "^2.4.1",
-    "ts-node-dev": "^2.0.0",
-    "typescript": "^5.3.3"
+    "ts-node-dev": "^2.0.0"
   }
 }
