--- a/data/project-e8477172-087a-4d72-a309-60871b372ddd-data.json
+++ b/data/project-e8477172-087a-4d72-a309-60871b372ddd-data.json
@@ -1553,10 +1553,10 @@
           "comments": "Auto-generated Type: Positive Flow",
           "testData": "",
           "createdAt": "2025-12-12T05:26:29.709Z",
-          "testSteps": " Navigate back to the 'Manage Staff' module.  Locate the newly added staff member (e.g., 'johndoe') in the list.  Verify the displayed details (Username, First Name, Last Name, Role, Mobile Number, Email ID).  ",
-          "updatedAt": "2025-12-12T05:26:29.709Z",
+          "testSteps": " Navigate back to the 'Manage Staff' module.  Locate the newly added staff member in the list.  Verify the displayed details (Username, First Name, Last Name, Role, Mobile Number, Email ID).  ",
+          "updatedAt": "2025-12-13T05:18:10.924Z",
           "testCaseId": "TC_AI_AUTO_03",
-          "actualResult": "",
+          "actualResult": "all details are match perfectly",
           "testScenario": "Verify that newly added staff appears in the 'Manage Staff' list.",
           "preConditions": "",
           "expectedResult": "The staff member 'johndoe' is present in the 'Manage Staff' list with accurate details matching the input.",
