--- a/data/projects.json
+++ b/data/projects.json
@@ -16,11 +16,17 @@
     },
     {
       "id": "e8477172-087a-4d72-a309-60871b372ddd",
-      "name": "Foodchow POS",
-      "description": "POS app Desktop and Android",
       "user_id": "maTXKvjwehP7moFBH9fmG9bTCeI3",
       "createdAt": "2025-12-10T11:36:25.348Z",
-      "updatedAt": "2025-12-10T11:36:25.348Z"
+      "updatedAt": "2025-12-17T10:38:03.491Z"
+    },
+    {
+      "id": "06cd92fe-aa7f-4ec4-8cf3-c4e8a58d02ca",
+      "name": "E-Commerce Alpha",
+      "description": "Main web store automated testing suite",
+      "user_id": "demo-user-id",
+      "createdAt": "2025-12-17T10:36:01.845Z",
+      "updatedAt": "2025-12-17T10:36:01.845Z"
     }
   ]
 }
