--- a/package.json
+++ b/package.json
@@ -24,9 +24,11 @@
     "exceljs": "^4.4.0",
     "express": "^4.18.2",
     "firebase-admin": "^13.6.0",
+    "form-data": "^4.0.5",
     "helmet": "^7.1.0",
     "multer": "^2.0.2",
     "node-cron": "^4.2.1",
+    "node-fetch": "^3.3.2",
     "pixelmatch": "^7.1.0",
     "playwright": "^1.57.0",
     "pngjs": "^7.0.0",
