feat: Add API Lab, visual testing, test data management, and scheduling features with new services, routes, and database migrations.

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/multer": "^2.0.0",
     "@types/socket.io": "^3.0.1",
     "@types/uuid": "^9.0.7",
+    "axios": "^1.13.2",
     "copyfiles": "^2.4.1",
     "cors": "^2.8.5",
     "csv-parse": "^6.1.0",
